# secret-house-booking-bot-llm

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STRUCTURE.md  alembic.ini  pyproject.toml  pytest-no-cov.ini  test_pricing_manual.py
.claude/: commit_rules.yml  settings.local.json
.claude/agents/: code-reviewer.md  documentation-manager.md  optimizer.md  release-manager.md  test-runner.md
.scripts/: auto-commit-and-pr.py
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
PRPs/: available-dates-flow.md  current-prices-graph.md  faq-graph-flow.md  payment-confirmation-flow.md  postgresql-database-implementation.md
alembic/: env.py
application/: __init__.py
application/services/: __init__.py  availability_service.py  booking_service.py  chat_service.py  faq_service.py  pricing_service.py  user_service.py
apps/: __init__.py
apps/telegram_bot/: __init__.py  main.py
apps/telegram_bot/handlers/: callbacks.py  messages.py  payments.py
apps/telegram_bot/middlewares/: rate_limit.py
config/: pricing_config.json
core/: __init__.py  config.py  logging.py
core/utils/: datetime_helper.py  string_helper.py
domain/: __init__.py
domain/booking/: __init__.py  availability.py  entities.py  payment.py  ports.py  pricing.py
domain/chat/: __init__.py  entities.py  ports.py
domain/faq/: __init__.py  entities.py
domain/user/: __init__.py  entities.py  ports.py
halper/: __init__.py  string_halper.py
infrastructure/: __init__.py  container.py
infrastructure/db/: __init__.py  connection.py
infrastructure/db/models/: __init__.py  base.py  booking.py  chat.py  user.py
infrastructure/db/repositories/: __init__.py  base.py  booking_repository.py  chat_repository.py  user_repository.py
infrastructure/llm/: __init__.py
infrastructure/llm/clients/: openai_client.py
infrastructure/llm/extractors/: booking_extractor.py  date_extractor.py  pricing_extractor.py
infrastructure/llm/graphs/: __init__.py
infrastructure/llm/parsers/: pydantic_factory.py
infrastructure/notifications/: __init__.py  admin_service.py
tests/: __init__.py
tests/integration/: test_available_dates_flow.py  test_database_integration.py  test_faq_flow.py  test_migrations.py  test_pricing_flow.py
(+39 files in other folders)
